@@ -1,3 +1,15 @@
+2008-09-19  Darin Adler  <darin@apple.com>
+
+        Reviewed by Dan Bernstein.
+
+        - speculative fix for https://bugs.webkit.org/show_bug.cgi?id=20943
+          Assertion failure in RefCountedLeakCounter::cancelMessageSuppression() when closing a window
+
+        * WebView/WebView.mm:
+        (-[WebView _commonInitializationWithFrameName:groupName:]): Moved call to
+        RefCountedLeakCounter::suppressMessages in here.
+        (-[WebView initWithFrame:frameName:groupName:]): Moved it out of here.
+
 2008-09-18  Mark Rowe  <mrowe@apple.com>
 
         Reviewed by Dan Bernstein.
